--- a/lecutre_14/3_assignment.html
+++ b/lecutre_14/3_assignment.html
@@ -52,7 +52,7 @@
 		<div class="table">
 			<h1>Candy Statistics</h1>
 			<table>
-				<thead>
+				<thead class="no-effect">
 					<th>Product/units</th>
 					<th>Lollipops</th>
 					<th>Macaroons</th>
