--- a/lecutre_14/5_assignment.html
+++ b/lecutre_14/5_assignment.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Car List Bootstrap</title>
+		<link rel="stylesheet" href="5_assignment.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -18,7 +19,19 @@
 				<h1 class="text-center">Used Cars database</h1>
 			</div>
 			<div class="row">
-				<div class="col-3 bg-primary">drr</div>
+				<div class="col-3">
+					<ul class="list-group col-11">
+						<li class="list-group-item active">Ford Explorer</li>
+						<li class="list-group-item">Ford Excursion</li>
+						<li class="list-group-item">Pontiac Grand Prix</li>
+						<li class="list-group-item">Volvo v70</li>
+						<li class="list-group-item">Toyota Landcruiser</li>
+						<li class="list-group-item">Jeep Wrangler</li>
+						<li class="list-group-item">BMW 740</li>
+						<li class="list-group-item">Dodge Colt</li>
+						<li class="list-group-item">Toyota H1</li>
+					</ul>
+				</div>
 				<div class="col-6">
 					<label class="text-start" for="first-name">
 						Owner first name
@@ -28,97 +41,90 @@
 						class="form-control col-12 py-2"
 						type="text"
 						name="first-name"
-						placeholder="Marlene"
+						placeholder="Nancy"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
+					<label class="text-start" for="surname">
+						Owner surname
 					</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
 						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						name="surname"
+						placeholder="Thompson"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
+					<label class="text-start" for="email">Contact e-mail</label>
+					<br />
+					<input
+						class="form-control col-12 py-2"
+						type="email"
+						name="email"
+						placeholder="marlene.johnson@mail.com"
+					/>
+					<label class="text-start" for="address">
+						Owner address
 					</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
 						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						name="address"
+						placeholder="428 Elm St. "
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
-					</label>
+					<label class="text-start" for="state">Owner state</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
 						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						name="state"
+						placeholder="Ohio"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
-					</label>
+					<label class="text-start" for="car-make">Car make</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
 						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						name="car-make"
+						placeholder="Ford"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
-					</label>
+					<label class="text-start" for="car-model">Car model</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
 						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						name="car-model"
+						placeholder="explorer"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
+					<label class="text-start" for="model-year">
+						Car model year
 					</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
-						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						type="number"
+						min="1970"
+						max="3050"
+						name="model-year"
+						placeholder="1970"
 					/>
-					<label class="text-start" for="first-name">
-						Owner first name
-					</label>
+					<label class="text-start" for="price">Price</label>
 					<br />
 					<input
 						class="form-control col-12 py-2"
-						type="text"
-						name="first-name"
-						placeholder="Marlene"
-					/>
-					<label class="text-start" for="first-name">
-						Owner first name
-					</label>
-					<br />
-					<input
-						class="form-control col-12 py-2"
-						type="text"
-						name="first-name"
-						placeholder="Marlene"
+						type="number"
+						min="0"
+						name="price"
+						placeholder="12000"
 					/>
 				</div>
 				<div class="col-3">
-					<button class="col-8 btn btn-success btn-lg my-4">
+					<button class="col-8 btn btn-success btn-lg m-4">
 						Add Car
 					</button>
-					<button class="col-8 btn btn-primary btn-lg my-4">
+					<button class="col-8 btn btn-primary btn-lg m-4">
 						Update car info
 					</button>
-					<button class="col-8 btn btn-danger btn-lg my-4">
+					<button class="col-8 btn btn-danger btn-lg m-4">
 						Delete Car
 					</button>
 				</div>
