--- a/lecutre_14/5_assignment.html
+++ b/lecutre_14/5_assignment.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 			<div class="row my-5">
-				<h1 class="text-center">Used Cars database</h1>
+				<h1 class="fw-light text-center">Used Cars database</h1>
 			</div>
 			<div class="row">
 				<div class="col-3">
