add size breakpoints

--- a/lecutre_14/6_assignment.html
+++ b/lecutre_14/6_assignment.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="icon-div row col-12 p-2 m-0">
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img
 						src="icons/kindpng_1280233.png"
 						alt=""
@@ -30,15 +30,15 @@
 					/>
 					<p class="">Github</p>
 				</div>
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img src="icons/moddb.png" alt="" class="img-fluid p-2" />
 					<p class="">ModDB</p>
 				</div>
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img src="icons/youtube.png" alt="" class="img-fluid p-2" />
 					<p class="">Youtube</p>
 				</div>
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img
 						src="icons/linkedin.png"
 						alt=""
@@ -46,11 +46,11 @@
 					/>
 					<p class="">LinkedIn</p>
 				</div>
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img src="icons/twitter.png" alt="" class="img-fluid p-2" />
 					<p class="">Twitter</p>
 				</div>
-				<div class="img-with-text col-4 col-sm-2 text-center">
+				<div class="img-with-text col-4 col-md-2 text-center">
 					<img
 						src="icons/instagram.png"
 						alt=""
