--- a/lecutre_14/7_assignment.html
+++ b/lecutre_14/7_assignment.html
@@ -1,33 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Assignment 7</title>
-		<link rel="stylesheet" href="7_assignment.css" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous"
-		/>
-	</head>
-	<body>
-		<div class="green-row d-flex justify-content-around">
-			<div class="col-1 pb-5 mx-4 bg-success border border-dark">one</div>
-			<div class="col-1 mx-4 bg-success border border-dark">two</div>
-			<div class="col-1 mx-4 bg-success border border-dark">three</div>
-			<div class="col-1 mx-4 bg-success border border-dark">four</div>
-			<div class="col-1 mx-4 bg-success border border-dark">five</div>
-		</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Assignment 7</title>
+    <link rel="stylesheet" href="7_assignment.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="green-row d-flex justify-content-around">
+      <div
+        class="col-1 pb-5 mx-4 bg-success border border-dark"
+      >
+        one
+      </div>
+      <div class="col-1 mx-4 bg-success border border-dark">
+        two
+      </div>
+      <div class="col-1 mx-4 bg-success border border-dark">
+        three
+      </div>
+      <div class="col-1 mx-4 bg-success border border-dark">
+        four
+      </div>
+      <div class="col-1 mx-4 bg-success border border-dark">
+        five
+      </div>
+    </div>
 
-		<div class="red-row d-flex flex-row mx-1">
-			<div class="col-2 pb-5 bg-danger border border-dark">one</div>
-			<div class="col-4 pb-5 bg-danger border border-dark">two</div>
-			<div class="col-2 pb-5 bg-danger border border-dark">three</div>
-			<div class="col-2 pb-5 bg-danger border border-dark">four</div>
-			<div class="col-2 pb-5 bg-danger border border-dark">five</div>
-		</div>
-	</body>
+    <div class="red-row d-flex flex-row mx-1">
+      <div class="col-2 pb-5 bg-danger border border-dark">
+        one
+      </div>
+      <div class="col-4 pb-5 bg-danger border border-dark">
+        two
+      </div>
+      <div class="col-2 pb-5 bg-danger border border-dark">
+        three
+      </div>
+      <div class="col-2 pb-5 bg-danger border border-dark">
+        four
+      </div>
+      <div class="col-2 pb-5 bg-danger border border-dark">
+        five
+      </div>
+    </div>
+    <br />
+    <div class="container-2">
+      <div class="row mx-1">
+        <div
+          class="col-4 pb-5 bg-danger border border-dark"
+        >
+          One
+        </div>
+        <div
+          class="col-4 pb-5 bg-danger border border-dark"
+        >
+          Two
+        </div>
+        <div
+          class="col-4 pb-5 bg-danger border border-dark"
+        >
+          three
+        </div>
+        <div
+          class="col-4 pb-5 bg-danger border border-dark"
+        >
+          Four
+        </div>
+        <div
+          class="col-4 pb-5 bg-danger border border-dark"
+        >
+          Five
+        </div>
+      </div>
+      <br />
+
+      <div class="row">
+        <div
+          class="col-12 bg-success pb-5 border border-dark"
+        >
+          One
+        </div>
+
+        <div
+          class="col-4 bg-success p-5 border border-dark"
+          id="item-2"
+        >
+          Two
+        </div>
+        <div class="last-divs d-flex flex-wrap col-8 p-0">
+          <div class="col-6 bg-success border border-dark">
+            Three
+          </div>
+          <div class="col-6 bg-success border border-dark">
+            Four
+          </div>
+          <div class="col-6 bg-success border border-dark">
+            Five
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
