--- a/lecutre_14/4_assignment.html
+++ b/lecutre_14/4_assignment.html
@@ -19,36 +19,39 @@
 				<div class="col-3">
 					<h1>Book List Service</h1>
 					<p>Books:</p>
-					<div class="book-display">
-						<p class="pb-3 border-bottom ms-2">Dune (412 pages)</p>
-						<p class="pb-3 ms-2">
+					<div class="book-display" id="bookList" >
+						<p class="">Dune (412 pages)</p>
+						<p class="">
 							The eye of the World (782 pages)
 						</p>
 					</div>
 					<p>Add new Book:</p>
 					<div class="col-10">
+			<form action="" id="bookForm" >
 						<input
 							type="text"
-							class="form-control form-control-lg"
-							name="book-name"
+							class="form-control form-control-lg my-2"
+							name="bookName"
 							placeholder="Book name"
 						/>
-						<br />
 						<input
 							type="text"
-							class="form-control form-control-lg"
-							name="page-number"
+							class="form-control form-control-lg my-2"
+							name="bookPage"
 							placeholder="Page count"
 						/>
+						<div class="col-6 mt-4">
+							<button class="btn btn-primary btn-lg">Add book</button>
+						</div>
+					</form>
 					</div>
-
-					<div class="col-5 mt-4">
-						<button class="btn btn-primary btn-lg">Add book</button>
-					</div>
+				
+					
 				</div>
 			</div>
 		</div>
 
+		<script src="4_assignment.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
