--- a/lecutre_15_Cata_Riveros/2_assignment.html
+++ b/lecutre_15_Cata_Riveros/2_assignment.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-3">
+				<div class="col-12 col-md-8 col-lg-5">
 					<h1>Book List Service</h1>
 					<p>Books:</p>
 					<div class="book-display" id="bookList">
