--- a/lecutre_15_Cata_Riveros/3_assignment.html
+++ b/lecutre_15_Cata_Riveros/3_assignment.html
@@ -5,31 +5,43 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>My Silly Forum</title>
+		<link rel="stylesheet" href="3_assignment.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
-		<h1>Best Forum Evah!</h1>
+		<div class="container">
+			<div class="row my-5">
+				<div class="col-10 text-center">
+					<h1>Best Forum Evah!</h1>
+				</div>
+			</div>
+			<div class="row col-8 col-sm-6 col-md-4">
+				<button id="newPostBtn" class="btn btn-primary col-8 mx-2">
+					Add new post
+				</button>
 
-		<button id="newPostBtn">Add new post</button>
+				<form action="" id="postForm" style="display: none">
+					<div class="col-6">
+						<label for="name"><h2>Name:</h2></label>
+						<input type="text" name="name" id="formName" />
+					</div>
+					<div class="col-6">
+						<label for="post"><h2>Post:</h2></label>
+						<input type="text" name="post" id="formPost" />
+					</div>
 
-		<form action="" id="postForm" style="display: none">
-			<label for="name"><h2>Name:</h2></label>
-			<input type="text" name="name" />
-			<label for="post"><h2>Post:</h2></label>
-			<input type="text" name="post" />
-			<br />
-			<button type="submit">Submit</button>
-		</form>
-
-		<div id="postBoard">
-			<div>
-				<h2>Cata:</h2>
-				<button>Delete</button>
-				<p>
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					Numquam perspiciatis cupiditate odio quam distinctio iusto
-					pariatur cumque voluptate, recusandae animi minima alias,
-					quaerat nesciunt. Cupiditate amet nulla aliquid vero in!
-				</p>
+					<button type="submit" class="btn btn-primary my-4 px-5">
+						Submit
+					</button>
+				</form>
+			</div>
+			<div class="row col-10 mt-4">
+				<div id="postBoard"></div>
 			</div>
 		</div>
 		<script src="3_assignment.js"></script>
